// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createModalProvider should create an ModalProvider and match snapshot 1`] = `

<div>
  foo
</div>

`;

exports[`createModalProvider should pass custom props 1`] = `

<div>
  foo
</div>
<div>
  <div style="align-items: flex-start; bottom: 0px; display: flex; justify-content: center; left: 0px; max-height: 100vh; max-width: 100vw; overflow: auto; position: fixed; right: 0px; top: 0px;">
    <div style="background-color: rgba(0, 0, 0, 0.2); bottom: 0px; left: 0px; position: fixed; right: 0px; top: 0px; transform: translate3d(0px, -1px, 0px);">
    </div>
    <div role="dialog"
         style="background-color: rgb(255, 255, 255); margin: 3rem auto; max-width: 100vw; padding: 1.5rem; transform: translate3d(0px, 1px, 0px); width: 80rem;"
    >
      bar
    </div>
  </div>
</div>

`;
